# legend-engine

legend-engine-pure-ide-mcp/: README.md  pyproject.toml  server.py
legend-engine-pure-ide-mcp/legend_mcp/: classpath.py  config.py  ide_client.py  maven.py  process.py
legend-engine-pure-ide-mcp/tests/: test_classpath.py  test_classpath_integration.py  test_config.py  test_ide_client.py
legend-engine-xts-mcp/: pom.xml
legend-engine-xts-mcp/legend-engine-xt-mcp-engine-server/: README.md  pom.xml
legend-engine-xts-mcp/legend-engine-xt-mcp-engine-server/src/main/java/org/finos/legend/engine/mcp/engine/: BootstrapToolHandlers.java  BootstrapTypes.java  JsonRpcProtocol.java  LegendEngineMcpStdioServer.java  LegendEngineMcpToolDefinitions.java  MavenRunner.java  ReactorGraphBuilder.java
legend-engine-xts-mcp/legend-engine-xt-mcp-engine-server/src/test/java/org/finos/legend/engine/mcp/engine/: BootstrapTypesTest.java  JsonRpcProtocolTest.java  LegendEngineMcpStdioServerTest.java  MavenRunnerTest.java  ReactorGraphBuilderTest.java  TestLegendEngineMcpTools.java
legend-engine-xts-mcp/legend-engine-xt-mcp-protocol/src/main/java/org/finos/legend/engine/mcp/protocol/v20251125/result/: InitializeResult.java
legend-engine-xts-mcp/legend-engine-xt-mcp-server-orchestrator/src/main/java/org/finos/legend/engine/mcp/server/orchestrator/: LegendStatelessMcpServerOrchestrator.java
