[project]
name = "legend-engine-pure-ide-mcp"
version = "0.1.0"
description = "MCP server for Legend Pure IDE Light"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
legend-pure-ide-mcp = "server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: slow tests that require the PureIDE Light Java server",
]
